--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="./public/bot-image.ico" type="image/x-icon">
+    <link rel="icon" type="image/svg+xml" href="./public/bot-image.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aplha-bot</title>
+    <title>Alpha-Bot</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
